--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-lt application files
+# Built application files
 *.apk
 *.ap_
 
@@ -39,6 +39,7 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/caches
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -61,3 +62,6 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# macOS stuff
+.DS_Store
