--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,12 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.retrofit:retrofit:1.6.1'
-    implementation 'com.google.code.gson:gson:2.3'
+    // implementation 'com.google.code.gson:gson:2.3'
     implementation 'org.sufficientlysecure:html-textview:1.4'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     implementation(name: 'olm-sdk', ext: 'aar')
-    compile(name: 'react-native-webrtc', ext: 'aar')
+    implementation(name: 'react-native-webrtc', ext: 'aar')
     implementation(name: 'matrix-sdk', ext: 'aar')
 
 }
