--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    implementation 'com.github.timigod:android-chat-ui:v0.1.3'
+    // implementation 'com.github.timigod:android-chat-ui:v0.1.3'
+    implementation 'com.github.stfalcon:chatkit:0.2.2'
+
 
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.retrofit:retrofit:1.6.1'
-    // implementation 'com.google.code.gson:gson:2.3'
     implementation 'org.sufficientlysecure:html-textview:1.4'
     implementation 'com.google.code.gson:gson:2.8.0'
 
