--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ChatActivity" />
         <activity android:name=".activity.MapsActivity" />
+        <activity android:name=".activity.ChatKitActivity" />
     </application>
 
 </manifest>
