--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
         flatDir {
             dir 'libs'
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -53,6 +54,8 @@ dependencies {
     // implementation 'com.github.timigod:android-chat-ui:v0.1.3'
     implementation 'com.github.stfalcon:chatkit:0.2.2'
 
+
+    implementation 'com.github.lguipeng:BubbleView:1.0.1'
 
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
