--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.larla.larla">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -12,14 +11,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.USE_SIP" />
+
+    <uses-feature android:name="android.hardware.sip.voip"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -49,6 +46,7 @@
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.NewChatActivity" />
         <activity android:name=".activity.RoomInfoActivity" />
+        <activity android:name=".activity.WalkieTalkieActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -56,6 +54,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAlYYkjnhWi4-rVLwPbBI4S26ABM-De6_Q" />
+        <receiver android:name=".IncomingCallReceiver" android:label="Call Receiver" />
+
     </application>
 
 </manifest>
