SIP calls, first try. View added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".activity.NewChatActivity" />
         <activity android:name=".activity.RoomInfoActivity" />
         <activity android:name=".activity.WalkieTalkieActivity" />
+        <activity android:name=".activity.SipCallActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
