add permissions to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.USE_SIP" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission
+        android:name="android.permission.WAKE_LOCK"/>
 
     <uses-feature android:name="android.hardware.sip.voip"
         android:required="true" />
@@ -54,7 +59,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAlYYkjnhWi4-rVLwPbBI4S26ABM-De6_Q" />
-        <receiver android:name=".IncomingCallReceiver" android:label="Call Receiver" />
+
+        <receiver android:name=".sip.IncomingCallReceiver" android:label="Call Receiver" />
 
     </application>
 
