--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity android:name=".activity.RoomInfoActivity" />
         <activity android:name=".activity.WalkieTalkieActivity" />
         <activity android:name=".activity.SipCallActivity" />
+        <activity android:name=".activity.SipSettingsActivity" />
+
 
         <meta-data
             android:name="com.google.android.gms.version"
