--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.squareup.retrofit:retrofit:1.6.1'
     implementation 'org.sufficientlysecure:html-textview:1.4'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation(name: 'olm-sdk', ext: 'aar')
     implementation(name: 'react-native-webrtc', ext: 'aar')
