add notifications support when app is closed - notifications are moved to a service that needs to display a notification alert when it is in background

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,12 @@
 
         <receiver android:name=".sip.IncomingCallReceiver" android:label="Call Receiver" />
 
+
+        <receiver android:name=".NotificationAlarm"/>
+        <service
+            android:name=".NotificationService"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
